@@ -26,9 +26,24 @@ AC_ARG_ENABLE(insecure-random,
     fi], [qpdf_INSECURE_RANDOM=0])
 if test "$qpdf_INSECURE_RANDOM" = "1"; then
    AC_MSG_RESULT(yes)
-   AC_DEFINE([USE_INSECURE_RANDOM], [1], [Whether to use inscure random numbers])
+   AC_DEFINE([USE_INSECURE_RANDOM], [1], [Whether to use insecure random numbers])
 else
    AC_MSG_RESULT(no)
+fi
+
+AC_ARG_ENABLE(os-secure-random,
+   AS_HELP_STRING([--enable-os-secure-random],
+                  [whether to try to use OS-provided secure random numbers (default is yes)]),
+   [if test "$enableval" = "yes"; then
+      qpdf_OS_SECURE_RANDOM=1;
+    else
+      qpdf_OS_SECURE_RANDOM=0;
+    fi], [qpdf_OS_SECURE_RANDOM=1])
+if test "$qpdf_OS_SECURE_RANDOM" = "1"; then
+   AC_MSG_RESULT(yes)
+else
+   AC_MSG_RESULT(no)
+   AC_DEFINE([SKIP_OS_SECURE_RANDOM], [1], [Whether to suppres use of OS-provided secure random numbers])
 fi
 
 AX_RANDOM_DEVICE
@@ -71,7 +86,7 @@ if test "$BUILD_INTERNAL_LIBS" = "0"; then
    AC_SEARCH_LIBS(pcre_compile,pcre,,[MISSING_PCRE=1; MISSING_ANY=1])
 fi
 
-if test "x$qpdf_INSECURE_RANDOM" != "x1"; then
+if test "x$qpdf_OS_SECURE_RANDOM" = "x1"; then
   OLIBS=$LIBS
   LIBS="$LIBS Advapi32.lib"
   AC_MSG_CHECKING(for Advapi32 library)
